// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`created user should NOT be active 1`] = `
Object {
  "active": false,
  "cabinet": null,
  "created_at": Any<Object>,
  "email": "toto@toto.com",
  "id": 2103,
  "last_login": null,
  "nom": "testAd",
  "password": Any<String>,
  "prenom": "testPrenom",
  "reset_password_expires": null,
  "reset_password_token": null,
  "type": "individuel",
  "username": "toto",
}
`;

exports[`should add magistrat 2`] = `
Array [
  Object {
    "bcc": undefined,
    "from": "ne-pas-repondre@emjpm.gouv.fr",
    "html": "
Bonjour la super team eMJPM :),<br />
Nous avons reçu une nouvelle inscription pour un utilisateur:<br />
- type: ti <br />
- nom: testPrenom testAd <br />
- email: toto@toto.com <br />
- code postal: 75010 <br /><br />

Merci de vérifier cette nouvelle demande et de la valider.
<br /><br />
Bonne journée :)
",
    "subject": "Nouvelle inscription",
    "text": "
Bonjour la super team emjpm :) ,

Nous avons reçu une nouvelle inscription pour un utilisateur:
- type: ti
- nom: testPrenom testAd
- email: toto@toto.com
- code postal: 75010

Merci de vérifier cette nouvelle demande et de la valider.

Bonne journée :)
",
    "to": "support.emjpm@fabrique.social.gouv.fr",
  },
]
`;

exports[`should add mandataire tis 1`] = `
Object {
  "success": true,
}
`;

exports[`should add mandataire tis 2`] = `
Array [
  Object {
    "bcc": undefined,
    "from": "ne-pas-repondre@emjpm.gouv.fr",
    "html": "
Bonjour la super team eMJPM :),<br />
Nous avons reçu une nouvelle inscription pour un utilisateur:<br />
- type: individuel <br />
- nom: testPrenom testAd <br />
- email: toto@toto.com <br />
- code postal: 75010 <br /><br />

Merci de vérifier cette nouvelle demande et de la valider.
<br /><br />
Bonne journée :)
",
    "subject": "Nouvelle inscription",
    "text": "
Bonjour la super team emjpm :) ,

Nous avons reçu une nouvelle inscription pour un utilisateur:
- type: individuel
- nom: testPrenom testAd
- email: toto@toto.com
- code postal: 75010

Merci de vérifier cette nouvelle demande et de la valider.

Bonne journée :)
",
    "to": "support.emjpm@fabrique.social.gouv.fr",
  },
]
`;

exports[`should send an email with good values 1`] = `
Array [
  Object {
    "bcc": undefined,
    "from": "ne-pas-repondre@emjpm.gouv.fr",
    "html": "
Bonjour la super team eMJPM :),<br />
Nous avons reçu une nouvelle inscription pour un utilisateur:<br />
- type: individuel <br />
- nom: testPrenom testAd <br />
- email: toto@toto.com <br />
- code postal: 75010 <br /><br />

Merci de vérifier cette nouvelle demande et de la valider.
<br /><br />
Bonne journée :)
",
    "subject": "Nouvelle inscription",
    "text": "
Bonjour la super team emjpm :) ,

Nous avons reçu une nouvelle inscription pour un utilisateur:
- type: individuel
- nom: testPrenom testAd
- email: toto@toto.com
- code postal: 75010

Merci de vérifier cette nouvelle demande et de la valider.

Bonne journée :)
",
    "to": "support.emjpm@fabrique.social.gouv.fr",
  },
]
`;
